--- a/Sample-Projects/Project-0/FPGA/Nitefury-II/project/project.srcs/sources_1/bd/Top/ui/bd_ad598355.ui
+++ b/Sample-Projects/Project-0/FPGA/Nitefury-II/project/project.srcs/sources_1/bd/Top/ui/bd_ad598355.ui
@@ -3,70 +3,70 @@
    "Default View_ScaleFactor":"0.833182",
    "Default View_TopLeft":"0,0",
    "ExpandedHierarchyInLayout":"",
-   "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS
+   "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port DDR3 -pg 1 -lvl 7 -x 1870 -y 70 -defaultsOSRD
-preplace port SPI_0 -pg 1 -lvl 7 -x 1870 -y 1010 -defaultsOSRD
+preplace port DDR3 -pg 1 -lvl 7 -x 1910 -y 70 -defaultsOSRD
+preplace port SPI_0 -pg 1 -lvl 7 -x 1910 -y 1010 -defaultsOSRD
 preplace port pcie_clkin -pg 1 -lvl 0 -x 0 -y 820 -defaultsOSRD
-preplace port pcie_mgt -pg 1 -lvl 7 -x 1870 -y 850 -defaultsOSRD
+preplace port pcie_mgt -pg 1 -lvl 7 -x 1910 -y 850 -defaultsOSRD
 preplace port sys_clk -pg 1 -lvl 0 -x 0 -y 90 -defaultsOSRD
 preplace port port-id_pci_reset -pg 1 -lvl 0 -x 0 -y 890 -defaultsOSRD
-preplace portBus LED_A1 -pg 1 -lvl 7 -x 1870 -y 1450 -defaultsOSRD
-preplace portBus LED_A2 -pg 1 -lvl 7 -x 1870 -y 1230 -defaultsOSRD
-preplace portBus LED_A3 -pg 1 -lvl 7 -x 1870 -y 1170 -defaultsOSRD
-preplace portBus LED_A4 -pg 1 -lvl 7 -x 1870 -y 150 -defaultsOSRD
-preplace portBus LED_M2 -pg 1 -lvl 7 -x 1870 -y 1330 -defaultsOSRD
-preplace portBus pcie_clkreq_l -pg 1 -lvl 7 -x 1870 -y 1570 -defaultsOSRD
-preplace portBus real_spi_ss -pg 1 -lvl 7 -x 1870 -y 1030 -defaultsOSRD
-preplace inst CodeBlinker_3 -pg 1 -lvl 6 -x 1650 -y 1450 -defaultsOSRD
-preplace inst GPIO_regs -pg 1 -lvl 6 -x 1650 -y 780 -defaultsOSRD
-preplace inst axi_interconnect_0 -pg 1 -lvl 5 -x 1280 -y 1010 -defaultsOSRD
-preplace inst axi_interconnect_1 -pg 1 -lvl 5 -x 1280 -y 270 -defaultsOSRD
-preplace inst axi_quad_spi_0 -pg 1 -lvl 6 -x 1650 -y 1040 -defaultsOSRD
-preplace inst const_true1 -pg 1 -lvl 5 -x 1280 -y 1370 -defaultsOSRD
-preplace inst mig_7series_0 -pg 1 -lvl 6 -x 1650 -y 110 -defaultsOSRD
-preplace inst util_ds_buf -pg 1 -lvl 1 -x 170 -y 820 -defaultsOSRD
+preplace portBus LED_A1 -pg 1 -lvl 7 -x 1910 -y 1450 -defaultsOSRD
+preplace portBus LED_A2 -pg 1 -lvl 7 -x 1910 -y 1230 -defaultsOSRD
+preplace portBus LED_A3 -pg 1 -lvl 7 -x 1910 -y 1170 -defaultsOSRD
+preplace portBus LED_A4 -pg 1 -lvl 7 -x 1910 -y 150 -defaultsOSRD
+preplace portBus LED_M2 -pg 1 -lvl 7 -x 1910 -y 1330 -defaultsOSRD
+preplace portBus pcie_clkreq_l -pg 1 -lvl 7 -x 1910 -y 1570 -defaultsOSRD
+preplace portBus real_spi_ss -pg 1 -lvl 7 -x 1910 -y 1030 -defaultsOSRD
+preplace inst CodeBlinker_3 -pg 1 -lvl 6 -x 1690 -y 1450 -defaultsOSRD
+preplace inst GPIO_regs -pg 1 -lvl 6 -x 1690 -y 780 -defaultsOSRD
+preplace inst const_true1 -pg 1 -lvl 5 -x 1310 -y 1370 -defaultsOSRD
+preplace inst mig_7series_0 -pg 1 -lvl 6 -x 1690 -y 110 -defaultsOSRD
 preplace inst util_vector_logic_0 -pg 1 -lvl 2 -x 470 -y 330 -defaultsOSRD
-preplace inst xadc_wiz_0 -pg 1 -lvl 6 -x 1650 -y 560 -defaultsOSRD
-preplace inst xdma_0 -pg 1 -lvl 4 -x 950 -y 890 -defaultsOSRD
-preplace inst xlconstant_1 -pg 1 -lvl 6 -x 1650 -y 1570 -defaultsOSRD
+preplace inst xadc_wiz_0 -pg 1 -lvl 6 -x 1690 -y 560 -defaultsOSRD
+preplace inst xlconstant_1 -pg 1 -lvl 6 -x 1690 -y 1570 -defaultsOSRD
 preplace inst xlconstant_2 -pg 1 -lvl 3 -x 710 -y 150 -defaultsOSRD
-preplace inst xlslice_D0 -pg 1 -lvl 6 -x 1650 -y 1230 -defaultsOSRD
-preplace inst xlslice_D1 -pg 1 -lvl 6 -x 1650 -y 1330 -defaultsOSRD
-preplace inst xlslice_D4_D2 -pg 1 -lvl 5 -x 1280 -y 1470 -defaultsOSRD
+preplace inst xlslice_D0 -pg 1 -lvl 6 -x 1690 -y 1230 -defaultsOSRD
+preplace inst xlslice_D1 -pg 1 -lvl 6 -x 1690 -y 1330 -defaultsOSRD
+preplace inst xlslice_D4_D2 -pg 1 -lvl 5 -x 1310 -y 1470 -defaultsOSRD
+preplace inst axi_interconnect_0 -pg 1 -lvl 5 -x 1310 -y 1010 -defaultsOSRD
+preplace inst axi_interconnect_1 -pg 1 -lvl 5 -x 1310 -y 270 -defaultsOSRD
+preplace inst axi_quad_spi_0 -pg 1 -lvl 6 -x 1690 -y 1040 -defaultsOSRD
+preplace inst util_ds_buf -pg 1 -lvl 1 -x 170 -y 820 -defaultsOSRD
+preplace inst xdma_0 -pg 1 -lvl 4 -x 960 -y 890 -defaultsOSRD
 preplace netloc CodeBlinker_3_led 1 6 1 NJ 1450
-preplace netloc GPIO_regs_gpio2_io_o 1 4 3 1120 1310 1480 950 1810
+preplace netloc GPIO_regs_gpio2_io_o 1 4 3 1150 1310 1510 950 1860
 preplace netloc M00_ARESETN_1 1 2 3 NJ 330 NJ 330 NJ
-preplace netloc S00_ACLK_1 1 4 2 1120 570 1470
-preplace netloc S00_ARESETN_1 1 4 2 1100 590 1430
+preplace netloc S00_ACLK_1 1 4 2 1150 570 1500
+preplace netloc S00_ARESETN_1 1 4 2 1130 590 1460
 preplace netloc axi_quad_spi_0_ss_o 1 6 1 NJ 1030
-preplace netloc const_true1_dout 1 5 1 1460J 1370n
-preplace netloc mig_7series_0_init_calib_complete 1 6 1 1840J 150n
-preplace netloc mig_7series_0_ui_addn_clk_0 1 5 2 1490 220 1810
-preplace netloc mig_7series_0_ui_clk 1 4 3 1130 400 NJ 400 1820
-preplace netloc mig_7series_0_ui_clk_sync_rst 1 1 6 320 390 NJ 390 NJ 390 NJ 390 NJ 390 1830
+preplace netloc const_true1_dout 1 5 1 1490J 1370n
+preplace netloc mig_7series_0_init_calib_complete 1 6 1 1890J 150n
+preplace netloc mig_7series_0_ui_addn_clk_0 1 5 2 1520 220 1860
+preplace netloc mig_7series_0_ui_clk 1 4 3 1160 400 NJ 400 1870
+preplace netloc mig_7series_0_ui_clk_sync_rst 1 1 6 320 390 NJ 390 NJ 390 NJ 390 NJ 390 1880
 preplace netloc pci_reset_1 1 0 4 NJ 890 NJ 890 NJ 890 NJ
 preplace netloc util_ds_buf_IBUF_OUT 1 1 3 NJ 810 NJ 810 790J
-preplace netloc xadc_wiz_1_temp_out 1 5 2 1470 230 1810
-preplace netloc xdma_0_user_lnk_up 1 4 3 1130J 840 1460J 940 1830J
+preplace netloc xadc_wiz_1_temp_out 1 5 2 1500 230 1860
+preplace netloc xdma_0_user_lnk_up 1 4 3 1160J 840 1490J 940 1880J
 preplace netloc xlconstant_1_dout 1 6 1 NJ 1570
-preplace netloc xlconstant_2_dout 1 3 3 NJ 150 NJ 150 1450
+preplace netloc xlconstant_2_dout 1 3 3 NJ 150 NJ 150 1480
 preplace netloc xlslice_0_Dout 1 6 1 NJ 1330
 preplace netloc xlslice_2_Dout 1 5 1 NJ 1470
 preplace netloc xlslice_D0_Dout 1 6 1 NJ 1230
-preplace netloc axi_interconnect_0_M00_AXI 1 5 1 1450 760n
+preplace netloc axi_interconnect_0_M00_AXI 1 5 1 1480 760n
 preplace netloc axi_interconnect_0_M01_AXI 1 5 1 N 1010
-preplace netloc axi_interconnect_0_M02_AXI 1 5 1 1440 530n
-preplace netloc axi_interconnect_1_M00_AXI 1 5 1 1440 70n
+preplace netloc axi_interconnect_0_M02_AXI 1 5 1 1470 530n
+preplace netloc axi_interconnect_1_M00_AXI 1 5 1 1470 70n
 preplace netloc axi_quad_spi_0_SPI_0 1 6 1 NJ 1010
 preplace netloc diff_clock_rtl_0_1 1 0 1 NJ 820
 preplace netloc diff_clock_rtl_1_1 1 0 6 NJ 90 NJ 90 NJ 90 NJ 90 NJ 90 NJ
-preplace netloc mig_7series_0_DDR3 1 6 1 1810J 60n
-preplace netloc xdma_0_M_AXI 1 4 1 1110 210n
-preplace netloc xdma_0_M_AXI_LITE 1 4 1 1110 830n
+preplace netloc mig_7series_0_DDR3 1 6 1 1860J 60n
+preplace netloc xdma_0_M_AXI 1 4 1 1140 210n
+preplace netloc xdma_0_M_AXI_LITE 1 4 1 1140 830n
 preplace netloc xdma_0_pcie_mgt 1 4 3 NJ 850 NJ 850 NJ
-levelinfo -pg 1 0 170 470 710 950 1280 1650 1870
-pagesize -pg 1 -db -bbox -sgen -120 0 2030 1630
+levelinfo -pg 1 0 170 470 710 960 1310 1690 1910
+pagesize -pg 1 -db -bbox -sgen -120 0 2090 1630
 "
 }
 0
